--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="main.css">
   <link rel="icon" type="image/png" sizes="32x32" href="/qr-code-component-main/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | QR code component</title>
+  <title>QR code component</title>
 </head>
-<body>
+<body style="background-color: hsl(212, 45%, 89%);">
 
+<main>
   <div class="background-color"><!--Parent Grid-->
 
 <div class="entire"><!--Grid Item-->
@@ -20,12 +21,12 @@
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 </div>
 </div>
-<div class="attribution">
+<footer class="attribution">
   Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
   Coded by <a href="https://github.com/ab1820">Amanda Buttineau</a>.
+</footer>
 </div>
-</div>
-  
+</main>
 
 </body>
 </html>
